# pre-commit

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  README.md  list_models.py  openai_config_template  pyproject.toml  tongrobot_architecture.md  tongrobot_implementation_guide.md
.github/workflows/: ai-code-review.yml  pre-commit.yml
code_check/: ai_checker.py  review_with_ai.py
configs/: turtlebot3.yaml  turtlebot3_remote.yaml
examples/: 01_turtlebot_basic.py  02_turtlebot_remote.py  03_dashboard_demo.py
proto/: bridge_service.proto  build.sh  commands.proto  fix_imports.py  robot_state.proto  sensor_data.proto
tongrobot/: __init__.py  exceptions.py
tongrobot/core/: config.py  motion.py  robot.py  sensor.py  state.py
tongrobot/proto/: bridge_service_pb2.py  bridge_service_pb2_grpc.py  commands_pb2.py  commands_pb2_grpc.py  converters.py  robot_state_pb2.py  robot_state_pb2_grpc.py  sensor_data_pb2.py  sensor_data_pb2_grpc.py
tongrobot/transport/: base.py  grpc_transport.py  local.py
tongrobot/types/: __init__.py  commands.py  robot_state.py  sensor_data.py
tongrobot/utils/: logging.py  rate.py  transforms.py
tongrobot_bridge/: package.xml  setup.cfg  setup.py
tongrobot_bridge/launch/: bridge.launch.py
tongrobot_bridge/tongrobot_bridge/: bridge_node.py
tongrobot_dashboard/: build.sh
tongrobot_dashboard/frontend/: index.html  package.json  vite.config.ts
tongrobot_dashboard/frontend/src/: App.tsx  index.css
tongrobot_dashboard/frontend/src/components/: BaseStatePanel.tsx  CameraView.tsx  CommandPanel.tsx  ConnectionStatus.tsx  (+3 more)
(+3 files in other folders)
