<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tongrobot_bridge</name>
  <version>0.1.0</version>
  <description>TongRobot bridge node — ROS2 bridge + gRPC server</description>
  <maintainer email="dev@tongrobot.io">TongRobot</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-grpcio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
